Set CORS changes